--- a/home.html
+++ b/home.html
@@ -17,27 +17,101 @@
     <nav class="navbar navbar-expand bg-light navbar-light text-uppercase fixed-top" style="padding: 20px 50px;">
         <a class="navbar-brand text-dark" href="#">Home</a>
         <div class="navbar-nav">
-            <a class="nav-item active nav-link text-dark" href="#page-top">Portfolio</a>
+            <a class="nav-item nav-link text-dark" href="#">Portfolio</a>
             <a class="nav-item nav-link text-dark" href="#about">About</a>
-            <a class="nav-item nav-link text-dark" href="#contact">Contact</a>
+            <a class="nav-item nav-link text-dark" href="#contact">Say Hi!</a>
         </div>
     </nav>
 
     <header>
         <div class="container d-flex align-items-center flex-column">
-            <img src="./assets/images/avatar.png" alt="avatar" style="width: 250px;" id="headerImg" />
+            <img src="./assets/images/avatar.jpg" alt="avatar" style="width: 250px;" id="headerImg" />
             <h1 id="title">MICHAEL SHAW</h1>
             <p id="subtitle">Web Developer | Photographer | Journalist</p>
+            <a href="#about" class="text-dark" id="downarrow"><i class="fas fa-chevron-circle-down"
+                    style="width: 50px;"></i></a>
         </div>
     </header>
 
-    <section id="about">
-        <h3>About</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis aut beatae ipsam at quibusdam quaerat
-            eligendi, illo veniam rerum voluptate quis! Sequi dolorum ut voluptatibus praesentium maxime dicta ea.
-            Dolorem um sequie qui architecto doloremque, adipisci deserunt dolorum magni totam exercitationem placeat
-            recusandae ten, ad eligendi!</p>
+    <section class="aboutWrapper">
+        <div id="about">
+            <h3 class="text-white">Hi! I'm Michael. Nice to meet you.</h3>
+            <p class="text-white">
+                I'm only just starting out on my journey as a web designer and I couldn't be more excited. I've
+                completed a minor in Web Design at Curtin University in Perth, WA and I'm currently completing a Coding
+                Bootcamp at the University of Western Australia.
+            </p>
+            <p>
+
+            </p>
+        </div>
     </section>
+    <section class="about-cards">
+        <div class="card-group">
+            <div class="card text-center">
+                <img class="card-img-top icons" src="./assets/images/design.png" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Designer</h5>
+                    <p class="card-text">
+                        I like to code things from scratch, and enjoy bringing ideas to life in the browser.
+                        <!-- Change this as its stolen -->
+                    </p>
+                    <h6>Things I love designing</h6>
+                    <p>UX, UI, Mobile, Web</p>
+                    <h6>Design Tools:</h6>
+                    <ul>
+                        <li>Adobe XD</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img-top icons" src="./assets/images/front-end.png" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Front-end Developer</h5>
+                    <p class="card-text">
+                        I like to code things from scratch, and enjoy bringing ideas to life in the browser.
+                        <!-- Change this as its stolen -->
+                    </p>
+                    <h6>Languages I speak:</h6>
+                    <p>HTML, CSS, JavaScript, jQuery</p>
+                    <h6>Dev Tools:</h6>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>Bulma</li>
+                        <li>GitHub</li>
+                        <li>GitLab</li>
+                        <li>Terminal</li>
+                        <li>Codepen</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img-top icons" src="./assets/images/back-end.png" alt="..." id="icons">
+                <div class="card-body">
+                    <h5 class="card-title">Back-end Developer</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <h6>Languages I speak:</h6>
+                    <p>Node.js</p>
+                    <h6>Dev Tools:</h6>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section id="work">
         <h3>Work</h3>
