finish about cards, update index.html name

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p>Node.js</p>
                     <h6>Dev Tools:</h6>
                     <ul>
-                        <li></li>
+                        <li>Terminal</li>
                         <li></li>
                         <li></li>
                         <li></li>
@@ -114,12 +114,13 @@
 
 
     <section id="work">
-        <h3>Work</h3>
+        <h3>Recent Work I've Done</h3>
         <div class="gallery">
-            <figure><a
-                    href="target=https://github.com/michaelshxw/01-HTML-CSS-and-Git-Code-Refactor-Homework-Assignment"><img
-                        src="./assets/images/example1.jpg" alt="placeholder image">
-                    <figcaption id="fig1">Code Refractor: Week 1 Homework</figcaption>
+        
+            <figure><a class=""
+                    href="target=https://github.com/michaelshxw/01-HTML-CSS-and-Git-Code-Refactor-Homework-Assignment">
+                    <img src="./assets/images/example1.jpg" alt="placeholder image">
+                    <h3 class="overlay" id="fig1">Code Refractor: Week 1 Homework</h3>
                 </a></figure>
             <figure><a href="https://github.com/michaelshxw"><img src="./assets/images/example3.jpg"
                         alt="placeholder image">
